syntax = "proto3";

option csharp_namespace = "Grpc.Api";
import "dvh/contracts/pincode.proto";
package grpc.api;

// The PinCode service definition.
service Pincode {
  // Get Pincode
  rpc GetPincode (grpc.contracts.PincodeRequest) returns (grpc.contracts.PincodeResponse);
  // Note: Use full name for the request and response message types.
}